--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"express": "^4.17.1",
 		"express-session": "^1.17.1",
 		"method-override": "^3.0.0",
-		"mongoose": "^5.9.21"
+		"mongoose": "^5.9.21",
+		"multer": "^1.4.2"
 	},
 	"repository": {
 		"type": "git",
