--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
 		"dotenv": "^8.2.0",
 		"ejs": "^3.1.3",
 		"express": "^4.17.1",
+		"express-rate-limit": "^5.1.3",
 		"express-session": "^1.17.1",
+		"helmet": "^3.23.3",
 		"method-override": "^3.0.0",
 		"mongoose": "^5.9.21",
 		"multer": "^1.4.2",
