--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"ejs": "^3.1.3",
 		"express": "^4.17.1",
 		"express-rate-limit": "^5.1.3",
+		"express-sanitizer": "^1.0.5",
 		"express-session": "^1.17.1",
 		"helmet": "^3.23.3",
 		"method-override": "^3.0.0",
