--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
 		"ejs": "^3.1.3",
 		"express": "^4.17.1",
 		"express-rate-limit": "^5.1.3",
-		"express-sanitizer": "^1.0.5",
 		"express-session": "^1.17.1",
 		"helmet": "^3.23.3",
 		"method-override": "^3.0.0",
@@ -30,6 +29,7 @@
 		"passport": "^0.4.1",
 		"passport-local": "^1.0.0",
 		"passport-local-mongoose": "^6.0.1",
+		"sanitize-html": "^1.27.1",
 		"serve-favicon": "^2.5.0"
 	},
 	"repository": {
